--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@langchain/core": "^0.1.12",
     "@qdrant/js-client-rest": "^1.7.0",
     "cohere-ai": "^7.6.2",
+    "dotenv": "^16.3.1",
     "langchain": "^0.1.2"
   }
 }
