--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@qdrant/js-client-rest": "^1.7.0",
     "cohere-ai": "^7.6.2",
     "dotenv": "^16.3.1",
-    "langchain": "^0.1.2"
+    "langchain": "^0.1.2",
+    "uuid": "^9.0.1"
   }
 }
