--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@langchain/community": "^0.0.16",
     "@langchain/core": "^0.1.12",
     "@qdrant/js-client-rest": "^1.7.0",
+    "axios": "^1.6.5",
     "cohere-ai": "^7.6.2",
     "dotenv": "^16.3.1",
     "langchain": "^0.1.2",
