--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Elimeleth Capuano",
   "license": "ISC",
   "dependencies": {
     "@langchain/cohere": "^0.0.2",
     "@langchain/community": "^0.0.16",
     "@langchain/core": "^0.1.12",
+    "@langchain/openai": "^0.0.11",
     "@qdrant/js-client-rest": "^1.7.0",
     "axios": "^1.6.5",
     "cohere-ai": "^7.6.2",
