--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "@langchain/core": "^0.1.12",
     "@langchain/openai": "^0.0.11",
     "@qdrant/js-client-rest": "^1.7.0",
+    "@types/html-to-text": "^9.0.4",
     "axios": "^1.6.5",
     "cohere-ai": "^7.6.2",
     "dotenv": "^16.3.1",
-    "langchain": "^0.1.2",
+    "html-to-text": "^9.0.5",
+    "jsdom": "^24.0.0",
+    "langchain": "^0.1.12",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
