--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cohere-ai": "^7.6.2",
     "dotenv": "^16.3.1",
     "html-to-text": "^9.0.5",
+    "ignore": "^5.3.1",
     "jsdom": "^24.0.0",
     "langchain": "^0.1.12",
     "uuid": "^9.0.1"
